# primes_sieve

./: .gitignore  README.md  example.py  setup.cfg  setup.py
source/: __init__.py  __main__.py  example.py  sieve.py
source/tests/: test_bad_input.py  test_numbers.py
