[metadata]

name='primes_sieve'
version='0.0.1'
description='A sample Python project with some functionality'
long_description=file:README.md
long_description_content_type='text/markdown'

url='https://github.com/pypa/sampleproject' # Optional

author='Nathalia B'

author_email='natalyxxxgo@gmail.com'

license_files = LICENSE.txt
